// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItemName should initially render with id 1`] = `
<span
  data-testid="loading-1"
>
  CONTENT_ITEM_ID
</span>
`;

exports[`ContentItemName should render fallback to the id if no app link is found 1`] = `
<span
  data-testid="error"
>
  CONTENT_ITEM_ID
</span>
`;

exports[`ContentItemName should render the link 1`] = `
<span
  data-testid="loading-1"
>
  CONTENT_ITEM_ID
</span>
`;

exports[`ContentItemName should render the link 2`] = `
<span
  data-testid="loading-2"
>
  CONTENT_ITEM_ID
</span>
`;

exports[`ContentItemName should render the link 3`] = `
<span
  data-testid="loaded"
>
  CONTENT_ITEM_LABEL
</span>
`;

exports[`ContentItemName should render the link 4`] = `
<div>
  <a
    class="svelte-1c0jp0i"
    href="LINK"
    target="_self"
  >
    <span
      data-testid="loaded"
    >
      CONTENT_ITEM_LABEL
    </span>
  </a>
  
  
</div>
`;
